# zeroclaw-neurosymbolic

./: Cargo.toml  README.md
crates/synapse-core/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/synapse-core/examples/: grpc_verify.rs
crates/synapse-core/proto/: semantic_engine.proto
crates/synapse-core/src/: audit.rs  auth.rs  disambiguation.rs  episodic.rs  lance_store.rs  lib.rs  main.rs  mcp_stdio.rs  mcp_types.rs  persistence.rs  processor.rs  reasoner.rs  scenarios.rs  server.rs  store.rs  vector_store.rs
crates/synapse-core/src/domain/: constants.rs  explorer_types.rs  mod.rs  neighbor_explorer.rs
crates/synapse-core/src/ingest/: extractor.rs  mod.rs  ontology.rs  processor.rs
crates/synapse-core/src/tests/: memory_tests.rs  mod.rs
crates/synapse-core/tests/: server_test.rs  test_features.rs  test_graph_traversal.rs  test_mcp_stdio.rs  test_provenance.rs  test_vector_store.rs
crates/synapse-engine/: Cargo.toml
crates/synapse-engine/src/: lib.rs
docs/: graph-memory-hexagonal-boundary.md  synapse-remote-source-policy.md
src/: main.rs
src/agent/: dispatcher.rs  loop_.rs  loop_.rs.backup  mod.rs  swarm_coordinator.rs  synapse_parsing.rs  tools_graph.rs
src/agent/synapse/: mod.rs  orchestrator.rs  swarm.rs
src/channels/: mod.rs
src/config/: mod.rs  schema.rs
src/cron/: scheduler.rs
src/daemon/: dreaming.rs  mod.rs
src/gateway/: mod.rs
src/memory/: backend.rs  graph_traits.rs  lucid.rs  markdown.rs  mod.rs  none.rs  sqlite.rs  synapse.rs  synapse_domain_adapter.rs  traits.rs
src/memory/synapse/: graph_adapter.rs  ontology.rs
src/onboard/: wizard.rs
src/providers/: compatible.rs  gemini.rs
tests/: synapse_integration.rs
tests/assets/ontologies/: duplicate.ttl  invalid.ttl  invalid_ontology.ttl  literal_object_ontology.ttl  unsupported.txt  valid.ttl  valid_ontology.ttl
