[package]
edition = "2021"
name = "synapse-core"
version = "0.8.5"
build = "build.rs"
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "A neuro-symbolic semantic engine for OpenClaw, combining graph databases with vector operations."
readme = "README.md"
license = "MIT"

[lib]
name = "synapse_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dashmap = "5.5"
futures = "0.3"
html2text = "0.16.7"
jsonschema = "0.18"
ndarray = "0.15"
ordered-float = "5.1.0"
oxigraph = "0.3"
oxrdf = "0.2"
prost = "0.12"
rand = "0.9.2"
rand_pcg = "0.3"
reasonable = "0.3.2"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
space = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.11"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
dirs = "5.0"
tracing = "0.1"

# Candle replacement for FastEmbed/ORT
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.4"

[build-dependencies]
tonic-build = "0.11"
